--- a/pom.xml
+++ b/pom.xml
@@ -84,11 +84,11 @@
             <artifactId>cglib</artifactId>
             <version>3.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.kafka</groupId>
-            <artifactId>spring-kafka</artifactId>
-            <version>2.6.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.kafka</groupId>-->
+<!--            <artifactId>spring-kafka</artifactId>-->
+<!--            <version>2.6.0</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
@@ -97,15 +97,6 @@
     </dependencies>
 
     <build>
-
-        <resources>
-            <resource>
-                <directory>src/main/java/com/kure/test</directory>
-                <excludes>
-                    <exclude>**/*</exclude>
-                </excludes>
-            </resource>
-        </resources>
 
         <plugins>
             <plugin>
@@ -119,8 +110,6 @@
                 <version>3.0</version>
             </plugin>
         </plugins>
-
-
     </build>
 
 </project>
