--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.14</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.erayt</groupId>
             <artifactId>webnet</artifactId>
             <version>2.0</version>
