--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,13 @@
     <groupId>com.kure.service</groupId>
     <artifactId>app1-service</artifactId>
     <version>1.0.0</version>
+    <modules>
+        <module>dubbo</module>
+        <module>dubbo-consumer</module>
+        <module>dubbo-interface</module>
+    </modules>
 
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
 
     <parent>
@@ -257,6 +262,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>2.7.8</version>
+        </dependency>
+
 
     </dependencies>
 
