--- a/dubbo-consumer/src/main/resources/config/application.properties
+++ b/dubbo-consumer/src/main/resources/config/application.properties
@@ -1,10 +1,5 @@
-#设置内嵌Tomcat
-server.port=8080
-#设置上下文根
-server.servlet.context-path=/
+server.port=8082 
 
-#配置 dubbo 的服务提供者信息
-#服务提供者应用名称(必须写，且不能重复)
-spring.application.name=springboot-dubbo-consumer
-#设置注册中心
-spring.dubbo.registry=zookeeper://192.168.2.129:2181
+dubbo.application.name=order-service-consumer
+dubbo.registry.address=zookeeper://127.0.0.1:2181
+dubbo.monitor.protocol=registry
