--- a/dubbo-consumer/src/main/resources/config/application.properties
+++ b/dubbo-consumer/src/main/resources/config/application.properties
@@ -1,5 +1,6 @@
 server.port=8082 
 
 dubbo.application.name=order-service-consumer
-dubbo.registry.address=zookeeper://127.0.0.1:2181
+#dubbo.registry.address=zookeeper://127.0.0.1:2181
+dubbo.registry.address=zookeeper://192.168.2.129:2181
 dubbo.monitor.protocol=registry
