--- a/dubbo/src/main/resources/config/application.properties
+++ b/dubbo/src/main/resources/config/application.properties
@@ -6,11 +6,23 @@ server.port=8081
 dubbo.application.name=user-service-provider
 #注册中心的协议和地址
 dubbo.registry.protocol=zookeeper
-dubbo.registry.address=127.0.0.1:2181
+#dubbo.registry.address=127.0.0.1:2181
+dubbo.registry.address=192.168.2.129:2181
 #通信规则（通信协议和接口）
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20880
 #连接监控中心
 dubbo.monitor.protocol=registry
-#开启包扫描，可替代 @EnableDubbo 注解
-##dubbo.scan.base-packages=com.zang.gmall
+
+#dubbo:
+#application:
+#name: myProvider
+#registry:
+#address: zookeeper://192.168.0.110:2181?backup=192.168.0.110:2182,192.168.0.110:2183
+#timeout: 15000
+#
+#protocol:
+#name: dubbo
+#port: 20880
+#scan:
+#base-packages: com.dqcgm.springbootdubbo_provider.service.impl
