--- a/spring-mq/pom.xml
+++ b/spring-mq/pom.xml
@@ -11,5 +11,14 @@
 
     <artifactId>spring-mq</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>4.4.0</version>
+        </dependency>
+
+    </dependencies>
+
 
 </project>
