--- a/test-main/pom.xml
+++ b/test-main/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>test-main</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.15.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
