--- a/test-main/pom.xml
+++ b/test-main/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>redisson</artifactId>
             <version>3.15.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.10</version>
+        </dependency>
     </dependencies>
 
 </project>
