--- a/test-main/src/main/resources/config/application-dev.yml
+++ b/test-main/src/main/resources/config/application-dev.yml
@@ -2,12 +2,35 @@ mybatis:
   mapper-locations: classpath:mapping/**/*Mapper.xml
 
 
+#spring:
+#  datasource:
+#    username: xfunds
+#    password: xfunds
+#    url: jdbc:mysql://127.0.0.1:3306/xfunds?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false
+#    driver-class-name: com.mysql.jdbc.Driver
+
 spring:
+  application:
+    name: dev-manager
   datasource:
-    username: xfunds
-    password: xfunds
-    url: jdbc:mysql://127.0.0.1:3306/xfunds?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false
+    # 配置数据源类型
+    type:
+      com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/xfunds?useUnicode=true&characterEncoding=UTF-8
+    username: kure
+    password: kure
+    # 初始化，最小，最大连接数
+    initialSize: 3
+    minidle: 3
+    maxActive: 18
+    # 获取数据库连接等待的超时时间
+    maxWait: 60000
+    # 配置多久进行一次检测，检测需要关闭的空闲连接 单位毫秒
+    timeBetweenEvictionRunsMillis: 60000
+    validationQuery: SELECT 1 FROM dual
+    # 配置监控统计拦截的filters,去掉后，监控界面的sql无法统计
+    filters: stat,wall,log4j
 
 server:
   port: 8011
